# BBB-News-RSS-Parser

./: README.md  bbc-news-parser.py  config.py  fetcher.py  main.py  parser.py  pyproject.toml  storage.py
bbc/: __main__.py
bbc/cli/: args.py  handlers.py
bbc/config/: header.py  topics.py
bbc/core/: fetcher.py  parser.py
bbc/data/: Sport.json
bbc/storage/: json.py
data/: Sport.json  news.json
